# tinyImage

./: LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  round.py  vite.config.ts
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: compress.rs  context_menu.rs  lib.rs  main.rs  service_handler.m  settings.rs
src/components/: DropZone.vue  FileList.vue  ResultDialog.vue  Settings.vue
src/composables/: useTheme.ts
src/stores/: app.ts
src/types/: index.ts
